--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id="mainHeading">
-            <h1>Calculator By: <span id="name">RizwanArif</span></h1>
+            <h1>Calculator By: <span id="name" style="font-size: 16px;">ℜ𝔦𝔷𝔴𝔞𝔫</span></h1>
         </div>
         <div id="container">
             <div id="calculator">
